Buy Label align center issue in mobile

--- a/src/pages/sidebar/index.scss
+++ b/src/pages/sidebar/index.scss
@@ -144,6 +144,8 @@
   @include btnBig;
   @include btnGreen;
   width: 100%;
+  display: block;
+  text-align: center;
 }
 
 .sidebar-footer {
